...

class MessagesTableViewController: UITableViewController {
    var messages = [CKRecord]()
    var refresh: UIRefreshControl!

    @IBAction func addMessage(_ sender: Any) {
        let alert = UIAlertController(title: "New Message", message: "Enter a Message", preferredStyle: .alert)
        alert.addTextField { (textField: UITextField) in
            textField.placeholder = "Your message..."
        }
        alert.addAction(UIAlertAction(title: "Send", style: .default, handler: {(action: UIAlertAction) in
            let textField = alert.textFields?.first
            
            if textField?.text != "" {
                let newMessage = CKRecord(recordType: "Messages")
                newMessage["content"] = textField?.text as CKRecordValue?
                
...
