...
    var users: Users?
    
    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        self.navigationItem.title = "Chat"
        collectionView!.collectionViewLayout.incomingAvatarViewSize = CGSize.zero
        collectionView!.collectionViewLayout.outgoingAvatarViewSize = CGSize.zero
        
        senderId = AuthenticationManager.sharedInstance.userID
        senderDisplayName = AuthenticationManager.sharedInstance.userName
        
...
